--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/clh5602/troll-bridge#readme",
   "dependencies": {
-    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "openai": "^4.63.0",
     "serialport": "^12.0.0"
   }
 }
